src/components/sections/Header/style.scss
@import '@/scss/variables.scss';

.header {
	width: 100%;
	padding: 46px 0;
	z-index: 600;
	display: inherit;
	grid-template-columns: inherit;
	grid-column: 1 / -1;
	position: absolute;

	@media (max-width: $maxTablet) {
		padding: 30px 0;
	}

	&.fixed {
		pointer-events: none;
	}
}

.headerFixed {
	position: fixed;
	top: 34px;
	left: 0;
	width: 100%;
	pointer-events: none;
	display: inherit;
	grid-template-columns: inherit;

	@media (max-width: $maxTablet) {
		top: 30px;
	}

	.row {
		display: flex;
		justify-content: space-between;
		align-items: center;
		grid-column: var(--mainWidth);
	}

	@media (max-width: $maxMobile) {
		.menu {
			.btnWrapper {
				display: block;
			}
		}
	}
}

.fixedLogo {
	opacity: 1;
	width: 111px;
	height: 48px;
	transition: all .3s .3s $cubic;
	pointer-events: all;
	display: block;

	@media (max-width: $maxMobile) {
		width: 102px;
		opacity: 0;
	}
}

.logoWrapper {
	opacity: 0;
	visibility: hidden;
}

.scrollLogo {
	position: absolute;
	left: 0;
	top: 10px;
	opacity: 0;
	transition: all .3s 0s $cubic;
	z-index: 1;
	pointer-events: auto;

	svg {
		width: 24px;

	}

	@media (max-width: $maxTablet) {
		top: 6px;
	}

	@media (max-width: $maxMobile) {
		opacity: 1;
		top: 10px;
	}
}

.fixed {
	.fixedLogo {
		opacity: 0;
		transition: all .3s 0s $cubic;
	}

	.scrollLogo {
		opacity: 1;
		transition: all .3s .3s $cubic;
	}
}

.row {
	display: flex;
	justify-content: flex-end;
	align-items: center;
	grid-column: var(--mainWidth);
	position: relative;
	svg {
		pointer-events: none;
	}
}

.nav {
	margin-right: 72px;
	@media (max-width: $minTablet){
		display: none;
	}
}

.menu {
	display: flex;
	align-items: center;
	pointer-events: all;
}

.link {
	font-weight: 500;
	position: relative;
}

.link:after {
	content: "";
	background-color: var(--black);
	position: absolute;
	left: 0;
	bottom: -3px;
	width: 100%;
	height: 2px;
	transition: all .3s ease-in-out;
	transform: scaleX(0);
	will-change: transform;
}

.link:hover:after {
	transform: scaleX(1);
}


.menu {
	li {
		margin: 0 0 0 32px;
		transition: all 0.3s ease-in-out;
		visibility: hidden;
	}
	.btn {
		width: 60px;
		height: 60px;
		border-radius: 50%;
		transition: all .7s $cubic;
		transform-origin: center;
		display: flex;
		justify-content: center;
		align-items: center;
		flex-direction: column;
		margin-top: 3px;

		@media (max-width: $maxTablet) {
			margin-top: -2px;
		}
		@media (max-width: $minTablet) {
			margin-top: 3px;
		}

		span {
			width: 20px;
			height: 3px;
			display: inline-block;
			background-color: black;
			transform-origin: center;
			transition: all .4s $cubic;

			&:first-child {
				margin: 0 0 5px;
			}
		}

		@media (max-width: $maxTablet) {
			width: 40px;
			height: 40px;
		}
	}

	&.active {
		li:not(.btnWrapper) {
			opacity: 0 !important;
			pointer-events: none;
		}

		.btn {
			background: $lightGreen;

			span {
				pointer-events: none;
			}

			span:first-child {
				transform: rotate(135deg) translate(3px, -2px) !important;

				@media (max-width: $maxTablet) {
					transform: rotate(135deg) translate(3.5px, -3px) !important;
				}
			}

			span:nth-child(2) {
				transform: rotate(45deg) translate(-3.5px, -3px) !important;

				@media (max-width: $maxTablet) {
					transform: rotate(45deg) translate(-2.5px, -2px) !important;
				}
			}
		}
	}
}

.logo {
	width: 111px;
	height: 48px;
	pointer-events: all;

	@media (max-width: $maxMobile) {
		width: 102px;
	}
}

